<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="welcome_msg">Welcome to Just Java</string>
    <string name="press_to_continue">Press to continue</string>
    <string name="hint_msg">Name</string>

    <!--
          Header text for the list of toppings [CHAR LIMIT=20]
        -->
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>

    <string name="whipped_cream_added">Whipped cream added</string>
    <string name="chocolate_added">Chocolate added</string>

    <string name="min_order_msg">Minimum order is 1 cup of coffee !</string>
    <string name="max_order_msg">Maximum order is 100 cups of coffee !</string>

    <!--
           Name for the order summary, it will be shown in the format of "Name: Sam" where
           Sam is the user's name. [CHAR LIMIT=NONE]
        -->
    <string name="order_name">Name: <xliff:g id="name" example="Sam">%s</xliff:g></string>
    <string name="order_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_total">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
</resources>
