<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--First LinearLayout  is for welcome screen-->
    <LinearLayout
        android:id="@+id/welcome_message_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="#036e64"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/welcome_messgae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/welcome_msg"
            android:textColor="#ddd"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:src="@drawable/alan_google" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#3b978d"
            android:onClick="dismissWelcomeMessageBox"
            android:text="@string/press_to_continue"
            android:textColor="#fff" />
    </LinearLayout>

    <!--Second layout is the main function layout-->
    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/app_content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_msg"
                android:inputType="textPersonName|textCapWords"
                android:layout_marginBottom="16dp"
                android:maxLines="1" />

            <TextView
                android:id="@+id/topping_text_view"
                style="@style/HeaderTextStyle"
                android:text="@string/toppings"/>

            <CheckBox
                android:id="@+id/chkCream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/whipped_cream"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chkChocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/order_quantity_text_view"
                style="@style/HeaderTextStyle"
                android:text="@string/quantity"/>

            <LinearLayout
                android:id="@+id/quantity_number_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"

                    android:text="-" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+" />

            </LinearLayout>

            <TextView
                android:id="@+id/summary_text_view"
                style="@style/HeaderTextStyle"
                android:text="@string/order_summary"/>

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/order" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>